# AV_TEST

.claude/: settings.local.json
.superpowers/brainstorm/1351-1779077268/content/: architecture.html  waiting.html
.superpowers/brainstorm/1351-1779077268/state/: server-stopped
.superpowers/brainstorm/1401-1779075387/content/: welcome.html
.superpowers/brainstorm/1401-1779075387/state/: server-stopped
.superpowers/brainstorm/234-1779093420/state/: server-stopped
HC32L110_DDL_Rev1.3.2/example/i2c/i2c_mcu_master_poll/mdk/: i2c_mcu_master_poll.uvprojx
HC32L110_DDL_Rev1.3.2/example/uart/uart_int/mdk/: uart_int.uvprojx
HC32L110_DDL_Rev1.3.2/example/uart/uart_master/mdk/: uart_master.uvprojx
docs/: pin-mapping.md
docs/superpowers/plans/: 2026-05-18-fire-alarm-implementation.md
docs/superpowers/specs/: 2026-05-18-fire-alarm-design.md
fire-alarm/: .gitignore  CLAUDE.md  CMakeLists.txt
fire-alarm/docs/: experience-summary.md
fire-alarm/mdk/: JLinkLog.txt  fire-alarm.sct  fire-alarm.uvguix.Administrator  fire-alarm.uvoptx  fire-alarm.uvprojx  jlinksettings.ini
fire-alarm/mdk/RTE/_fire-alarm/: RTE_Components.h
fire-alarm/mdk/output/: adt.crf  adt.d  alarm_light.crf  alarm_light.d  alarm_sound.crf  alarm_sound.d  clk.crf  clk.d  ddl.crf  ddl.d  fire-alarm.axf  fire-alarm.build_log.htm  fire-alarm.lnp  fire-alarm_fire-alarm.dep  gpio.crf  gpio.d  gpio_drv.crf  gpio_drv.d  interrupts_hc32l110.crf  interrupts_hc32l110.d  main.crf  main.d  pattern_engine.crf  pattern_engine.d  pattern_table.crf  pattern_table.d  pwm_drv.crf  pwm_drv.d  startup_hc32l110.d  system_hc32l110.crf  system_hc32l110.d  test_protocol.crf  test_protocol.d  timer_drv.crf  timer_drv.d  uart.crf  uart.d  uart_drv.crf  uart_drv.d
fire-alarm/src/: main.c
fire-alarm/src/app/: alarm_light.c  alarm_light.h  alarm_sound.c  alarm_sound.h  pattern_engine.c  pattern_engine.h  test_protocol.c  test_protocol.h
fire-alarm/src/config/: pattern_table.c  pattern_table.h
fire-alarm/src/driver/: gpio_drv.h  pwm_drv.h  timer_drv.h  uart_drv.h
fire-alarm/src/hal/hc32l110/: ddl_device.h  gpio_drv.c  pwm_drv.c  timer_drv.c  uart_drv.c
fire-alarm/test/: CMakeLists.txt  test_alarm_light.c  test_alarm_sound.c  test_framework.h  test_main.c  test_pattern_table.c  test_protocol.c
fire-alarm/test/mock/: mock_gpio.c  mock_gpio.h  mock_pwm.c  mock_pwm.h  mock_timer.c  mock_timer.h  mock_uart.c  mock_uart.h
fire-alarm/toolchain/: arm-gcc.cmake
(+1 files in other folders)
